cadastro disciplina pronto, e cadastro prova semi pronto

--- a/src/main/resources/application_en.properties
+++ b/src/main/resources/application_en.properties
@@ -1,6 +1,6 @@
 pages.comuns.cabecalho.img.alt 			    = Logo 
 pages.comuns.cabecalho.img.title			= Logo
-pages.comuns.cabecalho.lingua               = Change Language: 
+pages.comuns.cabecalho.lingua               = Language: 
 
 pages.comuns.menuLateral.gerencial 			= Manager
 pages.comuns.menuLateral.inicio             = Start    
