--- a/src/main/resources/application_pt.properties
+++ b/src/main/resources/application_pt.properties
@@ -1,6 +1,6 @@
 pages.comuns.cabecalho.img.alt 			    = Logotipo do Sistema
 pages.comuns.cabecalho.img.title			= Logotipo do Sistema
-pages.comuns.cabecalho.lingua               = Trocar Linguagem: 
+pages.comuns.cabecalho.lingua               = Idioma: 
 
 pages.comuns.menuLateral.gerencial 			= Gerencial
 pages.comuns.menuLateral.inicio             = In\u00edcio
