Tradução para inglês feita. Verificar alguns bugs na tradução dos xhtml, algumas coisas continuam em português.

--- a/src/main/resources/application_en.properties
+++ b/src/main/resources/application_en.properties
@@ -59,9 +59,88 @@ pages.cadastroProduto.valor					= Price
 pages.cadastroProduto.tableTitle            = Register Products
 pages.cadastroProduto.codigo				= Id
 
+pages.cadastroProfessor.title                  		= Register teacher
+pages.cadastroProfessor.menu						= Register teacher
+pages.cadastroProfessor.form.nome					= Name:
+pages.cadastroProfessor.form.cursoMinistra			= Course that minister:
+pages.cadastroProfessor.table.title  				= Registered teacher
+pages.cadastroProfessor.table.codigo				= Code
+pages.cadastroProfessor.table.nome					= Name
+pages.cadastroProfessor.table.cursoMinistra			= Course that minister
+pages.cadastroProfessor.professor.Disciplinas   	= Teacher's disciplines:
+pages.cadastroProfessor.disciplina.codigo			= Code
+pages.cadastroProfessor.disciplina.nome				= Name
 
-pages.comuns.form.btnSalvar                 = Save
-pages.commus.form.opcoes					= Options
+
+pages.cadastroDisciplina.title						= Register teacher 
+pages.cadastroDisciplina.menu						= Register teacher
+pages.cadastroDisciplina.form.nome					= Name:
+pages.cadastroDisciplina.form.professor				= Teacher:
+pages.cadastroDisciplina.form.sm.professor			= Select a teacher
+pages.cadastroDisciplina.table.title				= Registered disciplines
+pages.cadastroDisciplina.table.codigo				= Code
+pages.cadastroDisciplina.table.nome					= Name
+pages.cadastroDisciplina.disciplina.conteudos		= Course contents:
+pages.cadastroDisciplina.conteudo.codigo			= Code
+pages.cadastroDisciplina.conteudo.nome				= Name
+pages.cadastroDisciplina.disciplina.provas			= Course tests:
+pages.cadastroDisciplina.prova.codigo				= Code
+pages.cadastroDisciplina.prova.nome					= Name
+pages.cadastroDisciplina.prova.turma				= Class
+pages.cadastroDisciplina.prova.curso				= Course
+pages.cadastroDisciplina.dataAplicacao				= Date of aplication
+
+
+pages.cadastroConteudo.title						= Register content
+pages.cadastroConteudo.menu							= Register contents
+pages.cadastroConteudo.form.nome					= Name:
+pages.cadastroConteudo.form.disciplina				= Discipline:
+pages.cadastroConteudo.form.sm.disciplina			= Select a Discipline
+pages.cadastroConteudo.table.title					= Registered contents
+pages.cadastroConteudo.table.codigo					= Code
+pages.cadastroConteudo.table.nome					= Name
+
+
+pages.cadastroPergunta.title						= Register questions
+pages.cadastroPergunta.menu							= Register questions
+pages.cadastroPergunta.titleAlternativa				= Register alternative
+pages.cadastroPergunta.titleDissertativa			= Register dissertative
+pages.cadastroPergunta.titleMultiplaEscolha			= Register multiple choice
+pages.cadastroPergunta.titleVerdadeiroFalso			= Register true or false
+pages.cadastroPergunta.form.pergunta.enunciado		= Enunciate:
+pages.cadastroPergunta.form.pergunta.dificuldade	= Difficult:
+pages.cadastroPergunta.form.pergunta.tempoEstimado	= Estimated time:
+pages.cadastroPergunta.form.pergunta.dataCriacao 	= Creation date:
+pages.cadastroPergunta.table.title					= Registered questions 
+pages.cadastroPergunta.table.codigo					= Code		
+pages.cadastroPergunta.table.enunciado				= Enunciate
+pages.cadastroPergunta.table.dificuldade			= Difficult
+pages.cadastroPergunta.table.tempoEstimado			= Estimated time
+pages.cadastroPergunta.table.dataCriacao			= Creation date
+pages.cadastroPergunta.table.numeroPerguntas		= Number of registered questions
+
+
+pages.cadastroProva.title							= Register test
+pages.cadastroProva.menu							= Register test
+pages.cadastroProva.form.nome						= Name:
+pages.cadastroProva.form.turma						= Class:
+pages.cadastroProva.form.curso						= Course:
+pages.cadastroProva.form.dificuldade				= Difficult:
+pages.cadastroProva.form.dataAplicacao				= Aplication date:
+pages.cadastroProva.form.disciplina					= Discipline:
+pages.cadastroProva.form.sm.disciplina				= Select a discipline
+pages.cadastroProva.table.title						= Registered tests
+pages.cadastroProva.table.codigo					= Cade
+pages.cadastroProva.table.nome						= Name
+pages.cadastroProva.table.turma						= Class
+pages.cadastroProva.table.curso						= Course
+pages.cadastroProva.table.dificuldade				= Difficult
+pages.cadastroProva.table.dataAplicacao				= Aplication date
+pages.cadastroProva.btnGerar						= Generate test
+pages.cadastroProva.gerarProva.title				= Generated test:
+
+pages.comuns.form.btnSalvar                 		= Save
+pages.comuns.form.opcoes							= Options
 
 
 
