--- a/src/main/resources/application_en.properties
+++ b/src/main/resources/application_en.properties
@@ -1,63 +1,61 @@
-pages.comuns.cabecalho.img.alt 			    = Logo 
-pages.comuns.cabecalho.img.title			= Logo
-pages.comuns.cabecalho.lingua               = Language: 
+pages.comuns.cabecalho.lingua              			= Language: 
 
-pages.comuns.menuLateral.gerencial 			= Manager
-pages.comuns.menuLateral.inicio             = Start    
-pages.comuns.menuLateral.options            = Options
+pages.comuns.menuLateral.gerencial 					= Manager
+pages.comuns.menuLateral.inicio             		= Start    
+pages.comuns.menuLateral.options            		= Options
 
-pages.inicio.welcome						= Welcome to TMaker! The best service in web that you can make your tests with, confort, precision and quickness.
-pages.inicio.title							= System->Start
-pages.inicio.menu							= Home
+pages.inicio.welcome								= Welcome to TMaker! The best service in web that you can make your tests with, confort, precision and quickness.
+pages.inicio.title									= System->Start
+pages.inicio.menu									= Home
 
-pages.comuns.rodape.footerText 				= http://www.iznerol.com.br - Alfa 1.0
-pages.comuns.rodape.allRightsReserved 		= 2016 - All rigths reserved
+pages.comuns.rodape.footerText 						= http://www.iznerol.com.br - Alfa 1.0
+pages.comuns.rodape.allRightsReserved 				= 2016 - All rigths reserved
 
-pages.templateMenu.titleMainMenu 		     = Main Menu
+pages.templateMenu.titleMainMenu 		     		= Main Menu
 
-pages.cadastroAluno.title					= Manager->Register Student
-pages.cadastroAluno.menu					= Register Student
-pages.cadastroAluno.matricula				= Id
-pages.cadastroAluno.nome					= Name
-pages.cadastroAluno.curso					= Course
-pages.cadastroAluno.btnSalvar				= Save
-pages.cadastroAluno.filterMSG               = No students selection
-pages.cadastroAluno.optionTable             = Options
-pages.cadastroAluno.tableTitle              = Registered Students
+pages.cadastroAluno.title							= Manager->Register Student
+pages.cadastroAluno.menu							= Register Student
+pages.cadastroAluno.matricula						= Id
+pages.cadastroAluno.nome							= Name
+pages.cadastroAluno.curso							= Course
+pages.cadastroAluno.btnSalvar						= Save
+pages.cadastroAluno.filterMSG               		= No students selection
+pages.cadastroAluno.optionTable             		= Options
+pages.cadastroAluno.tableTitle              		= Registered Students
 
-pages.tela2.hello							= Hello from tela2
-pages.tela2.title							= Manager->Tela2
-pages.tela2.menu							= Screen2
+pages.tela2.hello									= Hello from tela2
+pages.tela2.title									= Manager->Tela2
+pages.tela2.menu									= Screen2
 
-pages.tela3.hello							= Hello from tela3
-pages.tela3.title							= Manager->Screen3
-pages.tela3.menu							= Screen3
+pages.tela3.hello									= Hello from tela3
+pages.tela3.title									= Manager->Screen3
+pages.tela3.menu									= Screen3
 
-pages.linguagem.title                       = Option->Language
-pages.linguagem.lingua						= Change Language:
-pages.linguagem.menu						= Language
+pages.linguagem.title                      		 	= Option->Language
+pages.linguagem.lingua								= Change Language:
+pages.linguagem.menu								= Language
 
 
-pages.cadastroFornecedor.title			    = Manager->Register Suplier
-pages.cadastroFornecedor.menu				= Register Suplier
-pages.cadastroFornecedor.nome               = Name
-pages.cadastroFornecedor.tableTitle         = Registered Supliers
-pages.cadastroFornecedor.codigo             = Id
-pages.cadastroFornecedor.produtosFornecedor = Suplier's products 
-pages.cadastroFornecedor.produto.nome       = Name
-pages.cadastroFornecedor.produto.descricao  = Description
-pages.cadastroFornecedor.produto.valor      = Price
-pages.cadastroFornecedor.produto.codigo     = Id
+pages.cadastroFornecedor.title			   			= Manager->Register Suplier
+pages.cadastroFornecedor.menu						= Register Suplier
+pages.cadastroFornecedor.nome               		= Name
+pages.cadastroFornecedor.tableTitle        			= Registered Supliers
+pages.cadastroFornecedor.codigo             		= Id
+pages.cadastroFornecedor.produtosFornecedor 		= Suplier's products 
+pages.cadastroFornecedor.produto.nome       		= Name
+pages.cadastroFornecedor.produto.descricao 			= Description
+pages.cadastroFornecedor.produto.valor      		= Price
+pages.cadastroFornecedor.produto.codigo     		= Id
 
 
-pages.cadastroProduto.title				    = Manager->Register Product
-pages.cadastroProduto.menu					= Register Product
-pages.cadastroProduto.descricao				= Description
-pages.cadastroProduto.fornecedor.nome		= Name
-pages.cadastroProduto.fornecedor.msg		= Selected a Suplier
-pages.cadastroProduto.valor					= Price
-pages.cadastroProduto.tableTitle            = Register Products
-pages.cadastroProduto.codigo				= Id
+pages.cadastroProduto.title				    		= Manager->Register Product
+pages.cadastroProduto.menu							= Register Product
+pages.cadastroProduto.descricao						= Description
+pages.cadastroProduto.fornecedor.nome				= Name
+pages.cadastroProduto.fornecedor.msg				= Selected a Suplier
+pages.cadastroProduto.valor							= Price
+pages.cadastroProduto.tableTitle           			= Register Products
+pages.cadastroProduto.codigo						= Id
 
 pages.cadastroProfessor.title                  		= Register teacher
 pages.cadastroProfessor.menu						= Register teacher
@@ -91,7 +89,7 @@ pages.cadastroDisciplina.prova.curso				= Course
 pages.cadastroDisciplina.dataAplicacao				= Date of aplication
 
 
-pages.cadastroConteudo.title						= Register content
+pages.cadastroConteudo.title						= Register contents
 pages.cadastroConteudo.menu							= Register contents
 pages.cadastroConteudo.form.nome					= Name:
 pages.cadastroConteudo.form.disciplina				= Discipline:
