Gerando pdf da prova, falta imagem da pergunta e os itens.

--- a/src/main/resources/application_en.properties
+++ b/src/main/resources/application_en.properties
@@ -128,7 +128,7 @@ pages.cadastroProva.form.dataAplicacao				= Aplication date:
 pages.cadastroProva.form.disciplina					= Discipline:
 pages.cadastroProva.form.sm.disciplina				= Select a discipline
 pages.cadastroProva.table.title						= Registered tests
-pages.cadastroProva.table.codigo					= Cade
+pages.cadastroProva.table.codigo					= Code
 pages.cadastroProva.table.nome						= Name
 pages.cadastroProva.table.turma						= Class
 pages.cadastroProva.table.curso						= Course
