falta ordenar e trocar perguntas, quantas vezes foram usadas, e prioriza

--- a/src/main/resources/application_pt.properties
+++ b/src/main/resources/application_pt.properties
@@ -3,6 +3,25 @@ pages.comuns.menuLateral.inicio            			= In\u00edcio
 pages.comuns.menuLateral.options            		= Op\u00e7\u00f5es    
 
 
+pages.comuns.menu.inicio							= In\u00edcio
+pages.comuns.menu.cadastros							= Cadastros
+pages.comuns.menu.gerarProva						= Gerar Prova
+pages.comuns.menu.idioma							= Idioma
+pages.comuns.menu.sobre								= Sobre
+
+
+pages.comuns.btn.professor							= Cadastro de Professores
+pages.comuns.btn.disciplina							= Cadastro de Disciplinas
+pages.comuns.btn.item								= Cadastro de Itens
+pages.comuns.btn.pergunta							= Cadastro de Perguntas
+pages.comuns.btn.conteudo							= Cadastro de Conteudos
+pages.comuns.btn.prova								= Cadastro de Provas
+
+
+pages.comuns.form.btnSalvar              			= Salvar
+pages.comuns.form.opcoes							= Opções
+
+
 pages.inicio.welcome								= Bem vindo ao TMaker! O melhor servi\u00e7o web para você professor fazer suas provas com conforto, precisão e rapidez.
 pages.inicio.title									= Sistema->In\u00edcio
 pages.inicio.menu									= In\u00edcio
@@ -15,51 +34,9 @@ pages.comuns.rodape.allRightsReserved 				= 2016 - Todos os direitos reservados
 pages.templateMenu.titleMainMenu 		     		= Menu Principal
 
 
-pages.cadastroAluno.title							= Gerencial->Cadastro Aluno
-pages.cadastroAluno.menu							= Cadastro Aluno
-pages.cadastroAluno.matricula						= Matr\u00edcula
-pages.cadastroAluno.nome							= Nome
-pages.cadastroAluno.curso							= Curso
-pages.cadastroAluno.filterMSG               		= Nenhum aluno selecionado pelo crit\u00e9rio do filtro
-pages.cadastroAluno.optionTable             		= Op\u00e7\u00f5esw
-pages.cadastroAluno.tableTitle              		= Alunos Cadastrados
-
-
-pages.tela2.hello									= Ol\u00e1 da tela2
-pages.tela2.title									= Gerencial->Tela2
-pages.tela2.menu									= Tela2
-
-
-pages.tela3.hello									= Ol\u00e1 da tela3
-pages.tela3.title									= Gerencial->Tela3
-pages.tela3.menu									= Tela3
-
-
 pages.linguagem.title                      			= Opc\u00f5es->Linguagem
 pages.linguagem.lingua								= Trocar de Idioma:
 pages.linguagem.menu								= Linguagem
-
-
-pages.cadastroFornecedor.title			   			= Gerencial->Cadastro Fornecedor
-pages.cadastroFornecedor.menu						= Cadastro Fornecedor
-pages.cadastroFornecedor.nome               		= Nome
-pages.cadastroFornecedor.tableTitle        			= Fornecedores Cadastrados
-pages.cadastroFornecedor.codigo             		= Código
-pages.cadastroFornecedor.produtosFornecedor 		= Produtos do fornecedor
-pages.cadastroFornecedor.produto.nome      			= Nome
-pages.cadastroFornecedor.produto.descricao  		= Descrição
-pages.cadastroFornecedor.produto.valor      		= Valor
-pages.cadastroFornecedor.produto.codigo     		= Código
-
-
-pages.cadastroProduto.title				   	    	= Gerencial->Cadastro Produto
-pages.cadastroProduto.menu							= Cadastro Produto
-pages.cadastroProduto.descricao						= Descrição
-pages.cadastroProduto.fornecedor.nome				= Nome
-pages.cadastroProduto.fornecedor.msg				= Selecione um fornecedor
-pages.cadastroProduto.valor							= Valor
-pages.cadastroProduto.tableTitle       	       		= Produtos Cadastrados
-pages.cadastroProduto.codigo						= Código
 
 
 pages.cadastroProfessor.title                  		= Cadastro de Professores
@@ -73,35 +50,44 @@ pages.cadastroProfessor.table.cursoMinistra			= Curso Ministra
 pages.cadastroProfessor.professor.Disciplinas   	= Disciplinas do Professor:
 pages.cadastroProfessor.disciplina.codigo			= Código
 pages.cadastroProfessor.disciplina.nome				= Nome
+pages.cadastroProfessor.filterMSG					= Nenhum professor selecionado pelo criterio do filtro
+pages.cadastroProfessor.disciplina.filterMSG		= Nenhuma Disciplina selecionada pelo criterio do filtro
 
 
-pages.cadastroDisciplina.title						= Cadastro de Professores 
-pages.cadastroDisciplina.menu						= Cadastro de Professores
+pages.cadastroDisciplina.title						= Cadastro de Disciplinas
+pages.cadastroDisciplina.menu						= Cadastro de Disciplinas
 pages.cadastroDisciplina.form.nome					= Nome:
 pages.cadastroDisciplina.form.professor				= Professor:
 pages.cadastroDisciplina.form.sm.professor			= Selecione um Professor
 pages.cadastroDisciplina.table.title				= Disciplinas Cadastradas
 pages.cadastroDisciplina.table.codigo				= Código
 pages.cadastroDisciplina.table.nome					= Nome
+pages.cadastroDisciplina.filterMSG					= Nenhuma disciplina selecionada pelo criterio do filtro
 pages.cadastroDisciplina.disciplina.conteudos		= Conteúdos da Disciplina:
 pages.cadastroDisciplina.conteudo.codigo			= Código
 pages.cadastroDisciplina.conteudo.nome				= Nome
+pages.cadastroDisciplina.conteudo.filterMSG			= Nenhum conteudo selecionado pelo criterio do filtro
 pages.cadastroDisciplina.disciplina.provas			= Provas da Disciplina:
 pages.cadastroDisciplina.prova.codigo				= Código
 pages.cadastroDisciplina.prova.nome					= Nome
+pages.cadastroDisciplina.prova.faculdade			= Faculdade
 pages.cadastroDisciplina.prova.turma				= Turma
 pages.cadastroDisciplina.prova.curso				= Curso
-pages.cadastroDisciplina.dataAplicacao				= Data de Aplicação
+pages.cadastroDisciplina.prova.dataAplicacao		= Data de Aplicação
+pages.cadastroDisciplina.prova.tempo				= Tempo Estimado
+pages.cadastroDisciplina.prova.filterMSG			= Nenhuma prova selecionada pelo criterio do filtro
 
 
 pages.cadastroConteudo.title						= Cadastro de Conteúdos
 pages.cadastroConteudo.menu							= Cadastro de Conteúdos
-pages.cadastroConteudo.form.nome					= Nome:
+pages.cadastroConteudo.form.nomeCont				= Nome:
 pages.cadastroConteudo.form.disciplina				= Disciplina:
 pages.cadastroConteudo.form.sm.disciplina			= Selecione uma Disciplina
+pages.cadastroConteudo.form.perguntas				= Perguntas:
 pages.cadastroConteudo.table.title					= Conteúdos Cadastrados
 pages.cadastroConteudo.table.codigo					= Código
 pages.cadastroConteudo.table.nome					= Nome
+pages.cadastroConteudo.filterMSG					= Nenhum conteudo selecionado pelo criterio do filtro
 
 
 pages.cadastroPergunta.title						= Cadastro de Perguntas
@@ -114,36 +100,64 @@ pages.cadastroPergunta.form.pergunta.enunciado		= Enunciado:
 pages.cadastroPergunta.form.pergunta.dificuldade	= Dificuldade:
 pages.cadastroPergunta.form.pergunta.tempoEstimado	= Tempo Estimado:
 pages.cadastroPergunta.form.pergunta.dataCriacao 	= Data de Criação:
+pages.cadastroPergunta.form.pergunta.itens			= Itens:
+pages.cadastroPergunta.form.pergunta.resposta		= Resposta:
 pages.cadastroPergunta.table.title					= Perguntas Cadastradas 
 pages.cadastroPergunta.table.codigo					= Código		
 pages.cadastroPergunta.table.enunciado				= Enunciado
+pages.cadastroPergunta.table.resposta				= Resposta
 pages.cadastroPergunta.table.dificuldade			= Dificuldade
 pages.cadastroPergunta.table.tempoEstimado			= Tempo Estimado
 pages.cadastroPergunta.table.dataCriacao			= Data de Criação
 pages.cadastroPergunta.table.numeroPerguntas		= Número de Perguntas Cadastradas
+pages.cadastroPergunta.filterMSG					= Nenhuma pergunta selecionada pelo criterio do filtro
 
 
 pages.cadastroProva.title							= Cadastro de Provas
 pages.cadastroProva.menu							= Cadastro de Provas
 pages.cadastroProva.form.nome						= Nome:
+pages.cadastroProva.form.faculdade					= Faculdade:
 pages.cadastroProva.form.turma						= Turma:
 pages.cadastroProva.form.curso						= Curso:
 pages.cadastroProva.form.dificuldade				= Dificuldade:
+pages.cadastroProva.form.dificuldadeDaPergunta		= Dificuldade das Perguntas:
 pages.cadastroProva.form.dataAplicacao				= Data de Aplicação:
+pages.cadastroProva.form.numeroPergunta 			= Número de perguntas:
+pages.cadastroProva.form.tempo						= Tempo Estimado:
 pages.cadastroProva.form.disciplina					= Disciplina:
-pages.cadastroProva.form.sm.disciplina				= Selecione um Disciplina
+pages.cadastroProva.form.sm.disciplina				= Selecione uma Disciplina
+pages.cadastroProva.form.conteudos					= Conteudos:
 pages.cadastroProva.table.title						= Provas Cadastradas
 pages.cadastroProva.table.codigo					= Código
 pages.cadastroProva.table.nome						= Nome
+pages.cadastroProva.table.faculdade					= Faculdade
 pages.cadastroProva.table.turma						= Turma
 pages.cadastroProva.table.curso						= Curso
 pages.cadastroProva.table.dificuldade				= Dificuldade
 pages.cadastroProva.table.dataAplicacao				= Data de Aplicação
-pages.cadastroProva.btnGerar						= Gerar Prova
-pages.cadastroProva.gerarProva.title				= Prova Gerada: 
+pages.cadastroProva.table.tempo						= Tempo Estimado
+pages.cadastroProva.filterMSG						= Nenhuma Prova selecionada pelo criterio do filtro
 
 
-pages.comuns.form.btnSalvar              			= Salvar
-pages.comuns.form.opcoes							= Opções
+pages.cadastroItem.title							= Cadastro de Itens
+pages.cadastroItem.menu								= Cadastro de Itens 
+pages.cadastroItem.form.nomeAlternativa				= Alternativa:
+pages.cadastroItem.form.resposta					= Resposta:
+pages.cadastroItem.form.resposta.booleanBtn.true	= Correta
+pages.cadastroItem.form.resposta.booleanBtn.false	= Incorreta
+pages.cadastroItem.table.title						= Itens Cadastrados
+pages.cadastroItem.table.codigoItem					= Código
+pages.cadastroItem.table.nomeAlternativa			= Alternativa
+pages.cadastroItem.table.resposta					= Resposta
+
+
+pages.geradorProva.title							= Gerador de Prova
+pages.geradorProva.menu								= Gerador de Prova
+pages.geradorProva.form.prova						= Prova a ser gerada:
+pages.geradorProva.form.sm.prova					= Selecione uma prova
+pages.geradorProva.form.btn.gerarProva				= Gerar prova	
+
+
+
 
 
