Traduções realizadas para todo o sistema.

--- a/src/main/resources/application_en.properties
+++ b/src/main/resources/application_en.properties
@@ -4,12 +4,29 @@ pages.comuns.menuLateral.gerencial 					= Manager
 pages.comuns.menuLateral.inicio             		= Start    
 pages.comuns.menuLateral.options            		= Options
 
-pages.inicio.welcome								= Welcome to TMaker! The best service in web that you can make your tests with, confort, precision and quickness.
+pages.inicio.welcome								= Welcome to TMaker! The best service in web that you can make your tests with, comfort, precision and quickness.
 pages.inicio.title									= System->Start
 pages.inicio.menu									= Home
 
+pages.comuns.form.btnSalvar                 		= Save
+pages.comuns.form.opcoes							= Options
+
+pages.comuns.menu.inicio							= Home
+pages.comuns.menu.cadastros							= Registers
+pages.comuns.menu.gerarProva						= Generate Test
+pages.comuns.menu.idioma							= Language
+pages.comuns.menu.sobre								= About us
+
+
+pages.comuns.btn.professor							= Register Teachers
+pages.comuns.btn.disciplina							= Register Discipline
+pages.comuns.btn.item								= Register Items
+pages.comuns.btn.pergunta							= Register Questions
+pages.comuns.btn.conteudo							= Register Contents
+pages.comuns.btn.prova								= Register Tests
+
 pages.comuns.rodape.footerText 						= http://www.iznerol.com.br - Alfa 1.0
-pages.comuns.rodape.allRightsReserved 				= 2016 - All rigths reserved
+pages.comuns.rodape.allRightsReserved 				= 2016 - All rights reserved
 
 pages.templateMenu.titleMainMenu 		     		= Main Menu
 
@@ -23,23 +40,19 @@ pages.cadastroAluno.filterMSG               		= No students selection
 pages.cadastroAluno.optionTable             		= Options
 pages.cadastroAluno.tableTitle              		= Registered Students
 
-pages.tela2.hello									= Hello from tela2
-pages.tela2.title									= Manager->Tela2
-pages.tela2.menu									= Screen2
-
-pages.tela3.hello									= Hello from tela3
-pages.tela3.title									= Manager->Screen3
-pages.tela3.menu									= Screen3
-
 pages.linguagem.title                      		 	= Option->Language
 pages.linguagem.lingua								= Change Language:
 pages.linguagem.menu								= Language
+pages.linguagem.idiomaDisp							= Available languages
+
+pages.sobre.title									= About us
+pages.sobre.info									= We are a big fucking company of information tecnology
 
 
-pages.cadastroFornecedor.title			   			= Manager->Register Suplier
-pages.cadastroFornecedor.menu						= Register Suplier
+pages.cadastroFornecedor.title			   			= Manager->Register Supplier
+pages.cadastroFornecedor.menu						= Register Supplier
 pages.cadastroFornecedor.nome               		= Name
-pages.cadastroFornecedor.tableTitle        			= Registered Supliers
+pages.cadastroFornecedor.tableTitle        			= Registered Suppliers
 pages.cadastroFornecedor.codigo             		= Id
 pages.cadastroFornecedor.produtosFornecedor 		= Suplier's products 
 pages.cadastroFornecedor.produto.nome       		= Name
@@ -52,7 +65,7 @@ pages.cadastroProduto.title				    		= Manager->Register Product
 pages.cadastroProduto.menu							= Register Product
 pages.cadastroProduto.descricao						= Description
 pages.cadastroProduto.fornecedor.nome				= Name
-pages.cadastroProduto.fornecedor.msg				= Selected a Suplier
+pages.cadastroProduto.fornecedor.msg				= Selected a Supplier
 pages.cadastroProduto.valor							= Price
 pages.cadastroProduto.tableTitle           			= Register Products
 pages.cadastroProduto.codigo						= Id
@@ -60,44 +73,54 @@ pages.cadastroProduto.codigo						= Id
 pages.cadastroProfessor.title                  		= Register teacher
 pages.cadastroProfessor.menu						= Register teacher
 pages.cadastroProfessor.form.nome					= Name:
-pages.cadastroProfessor.form.cursoMinistra			= Course that minister:
+pages.cadastroProfessor.form.cursoMinistra			= Ministered course:
 pages.cadastroProfessor.table.title  				= Registered teacher
 pages.cadastroProfessor.table.codigo				= Code
 pages.cadastroProfessor.table.nome					= Name
-pages.cadastroProfessor.table.cursoMinistra			= Course that minister
+pages.cadastroProfessor.table.cursoMinistra			= Ministered course
 pages.cadastroProfessor.professor.Disciplinas   	= Teacher's disciplines:
 pages.cadastroProfessor.disciplina.codigo			= Code
 pages.cadastroProfessor.disciplina.nome				= Name
+pages.cadastroProfessor.filterMSG					= No teacher selected by the filter criteria
+pages.cadastroProfessor.disciplina.filterMSG		= No discipline selected by the filter criteria
 
 
-pages.cadastroDisciplina.title						= Register teacher 
-pages.cadastroDisciplina.menu						= Register teacher
+pages.cadastroDisciplina.title						= Register Discipline
+pages.cadastroDisciplina.menu						= Register Discipline
 pages.cadastroDisciplina.form.nome					= Name:
 pages.cadastroDisciplina.form.professor				= Teacher:
 pages.cadastroDisciplina.form.sm.professor			= Select a teacher
 pages.cadastroDisciplina.table.title				= Registered disciplines
 pages.cadastroDisciplina.table.codigo				= Code
 pages.cadastroDisciplina.table.nome					= Name
+pages.cadastroDisciplina.filterMSG					= No discipline selected by the filter criteria
 pages.cadastroDisciplina.disciplina.conteudos		= Course contents:
 pages.cadastroDisciplina.conteudo.codigo			= Code
 pages.cadastroDisciplina.conteudo.nome				= Name
+pages.cadastroDisciplina.conteudo.filterMSG			= No content selected by the filter criteria
 pages.cadastroDisciplina.disciplina.provas			= Course tests:
 pages.cadastroDisciplina.prova.codigo				= Code
 pages.cadastroDisciplina.prova.nome					= Name
+pages.cadastroDisciplina.prova.faculdade			= College
 pages.cadastroDisciplina.prova.turma				= Class
 pages.cadastroDisciplina.prova.curso				= Course
-pages.cadastroDisciplina.dataAplicacao				= Date of aplication
+pages.cadastroDisciplina.prova.dataAplicacao		= Date of application
+pages.cadastroDisciplina.prova.tempo				= Estimated time
+pages.cadastroDisciplina.prova.filterMSG			= No test selected by the filter criteria
+pages.cadastroDisciplina.dataAplicacao				= Date of application
+
 
 
 pages.cadastroConteudo.title						= Register contents
 pages.cadastroConteudo.menu							= Register contents
-pages.cadastroConteudo.form.nome					= Name:
+pages.cadastroConteudo.form.nomeCont				= Name:
 pages.cadastroConteudo.form.disciplina				= Discipline:
 pages.cadastroConteudo.form.sm.disciplina			= Select a Discipline
+pages.cadastroConteudo.form.perguntas				= Questions:
 pages.cadastroConteudo.table.title					= Registered contents
 pages.cadastroConteudo.table.codigo					= Code
 pages.cadastroConteudo.table.nome					= Name
-
+pages.cadastroConteudo.filterMSG					= No content selected by the filter criteria
 
 pages.cadastroPergunta.title						= Register questions
 pages.cadastroPergunta.menu							= Register questions
@@ -105,40 +128,66 @@ pages.cadastroPergunta.titleAlternativa				= Register alternative
 pages.cadastroPergunta.titleDissertativa			= Register dissertative
 pages.cadastroPergunta.titleMultiplaEscolha			= Register multiple choice
 pages.cadastroPergunta.titleVerdadeiroFalso			= Register true or false
-pages.cadastroPergunta.form.pergunta.enunciado		= Enunciate:
+pages.cadastroPergunta.form.pergunta.enunciado		= Enunciation:
 pages.cadastroPergunta.form.pergunta.dificuldade	= Difficult:
 pages.cadastroPergunta.form.pergunta.tempoEstimado	= Estimated time:
 pages.cadastroPergunta.form.pergunta.dataCriacao 	= Creation date:
+pages.cadastroPergunta.form.pergunta.items			= Items:
+pages.cadastroPergunta.form.pergunta.resposta		= Answer:
 pages.cadastroPergunta.table.title					= Registered questions 
 pages.cadastroPergunta.table.codigo					= Code		
-pages.cadastroPergunta.table.enunciado				= Enunciate
+pages.cadastroPergunta.table.enunciado				= Enunciation
 pages.cadastroPergunta.table.dificuldade			= Difficult
 pages.cadastroPergunta.table.tempoEstimado			= Estimated time
 pages.cadastroPergunta.table.dataCriacao			= Creation date
 pages.cadastroPergunta.table.numeroPerguntas		= Number of registered questions
+pages.cadastroPergunta.filterMSG					= No questions selected by the filter criteria
 
 
 pages.cadastroProva.title							= Register test
 pages.cadastroProva.menu							= Register test
 pages.cadastroProva.form.nome						= Name:
+pages.cadastroProva.form.faculdade					= College:
 pages.cadastroProva.form.turma						= Class:
 pages.cadastroProva.form.curso						= Course:
 pages.cadastroProva.form.dificuldade				= Difficult:
-pages.cadastroProva.form.dataAplicacao				= Aplication date:
+pages.cadastroProva.form.dificuldadeDaPergunta		= Difficult of the questions:
+pages.cadastroProva.form.dataAplicacao				= Application date:
+pages.cadastroProva.form.numeroPergunta 			= Number of questions:
+pages.cadastroProva.form.tempo						= Estimated time:
 pages.cadastroProva.form.disciplina					= Discipline:
 pages.cadastroProva.form.sm.disciplina				= Select a discipline
+pages.cadastroProva.form.conteudos					= Contents:
 pages.cadastroProva.table.title						= Registered tests
 pages.cadastroProva.table.codigo					= Code
 pages.cadastroProva.table.nome						= Name
+pages.cadastroProva.table.faculdade					= College
 pages.cadastroProva.table.turma						= Class
 pages.cadastroProva.table.curso						= Course
 pages.cadastroProva.table.dificuldade				= Difficult
-pages.cadastroProva.table.dataAplicacao				= Aplication date
+pages.cadastroProva.table.dataAplicacao				= Application date
+pages.cadastroProva.table.tempo						= Estimated time
+pages.cadastroProva.filterMSG						= No test selected by the filter criteria 
 pages.cadastroProva.btnGerar						= Generate test
 pages.cadastroProva.gerarProva.title				= Generated test:
 
-pages.comuns.form.btnSalvar                 		= Save
-pages.comuns.form.opcoes							= Options
+pages.cadastroItem.title							= Register Items
+pages.cadastroItem.menu								= Register Items 
+pages.cadastroItem.form.nomeAlternativa				= Alternative:
+pages.cadastroItem.form.resposta					= Answer:
+pages.cadastroItem.form.resposta.booleanBtn.true	= Correct
+pages.cadastroItem.form.resposta.booleanBtn.false	= Incorrect
+pages.cadastroItem.table.title						= Registered items
+pages.cadastroItem.table.codigoItem					= Code
+pages.cadastroItem.table.nomeAlternativa			= Alternative
+pages.cadastroItem.table.resposta					= Answer
+pages.cadastroItem.filterMSG						= No item selected by the filter criteria
+
+pages.geradorProva.title							= Test Generator
+pages.geradorProva.menu								= Test Generator
+pages.geradorProva.form.prova						= Test to be generated:
+pages.geradorProva.form.sm.prova					= Select a test
+pages.geradorProva.form.btn.gerarProva				= Generate test	
 
 
 
