--- a/src/main/resources/application_pt.properties
+++ b/src/main/resources/application_pt.properties
@@ -7,7 +7,7 @@ pages.comuns.menu.inicio							= In\u00edcio
 pages.comuns.menu.cadastros							= Cadastros
 pages.comuns.menu.gerarProva						= Gerar Prova
 pages.comuns.menu.idioma							= Idioma
-pages.comuns.menu.sobre								= Sobre
+pages.comuns.menu.sobre								= Sobre nós
 
 
 pages.comuns.btn.professor							= Cadastro de Professores
@@ -34,19 +34,23 @@ pages.comuns.rodape.allRightsReserved 				= 2016 - Todos os direitos reservados
 pages.templateMenu.titleMainMenu 		     		= Menu Principal
 
 
-pages.linguagem.title                      			= Opc\u00f5es->Linguagem
+pages.linguagem.title                      			= Opc\u00f5es->Idioma
 pages.linguagem.lingua								= Trocar de Idioma:
-pages.linguagem.menu								= Linguagem
+pages.linguagem.menu								= Idioma
+pages.linguagem.idiomaDisp							= Idiomas disponíveis
+
+pages.sobre.title									= Sobre nós
+pages.sobre.info									= noix somus uma empresa foda de tecnologia da informaçaum
 
 
 pages.cadastroProfessor.title                  		= Cadastro de Professores
 pages.cadastroProfessor.menu						= Cadastro de Professores
 pages.cadastroProfessor.form.nome					= Nome:
-pages.cadastroProfessor.form.cursoMinistra			= Curso que Ministra:
+pages.cadastroProfessor.form.cursoMinistra			= Curso ministrado:
 pages.cadastroProfessor.table.title  				= Professores Cadastrados
 pages.cadastroProfessor.table.codigo				= Código
 pages.cadastroProfessor.table.nome					= Nome
-pages.cadastroProfessor.table.cursoMinistra			= Curso Ministra
+pages.cadastroProfessor.table.cursoMinistra			= Curso ministrado
 pages.cadastroProfessor.professor.Disciplinas   	= Disciplinas do Professor:
 pages.cadastroProfessor.disciplina.codigo			= Código
 pages.cadastroProfessor.disciplina.nome				= Nome
@@ -149,6 +153,7 @@ pages.cadastroItem.table.title						= Itens Cadastrados
 pages.cadastroItem.table.codigoItem					= Código
 pages.cadastroItem.table.nomeAlternativa			= Alternativa
 pages.cadastroItem.table.resposta					= Resposta
+pages.cadastroItem.filterMSG						= Nenhum Item selecionado pelo criterio do filtro
 
 
 pages.geradorProva.title							= Gerador de Prova
