corrigido alguns bugs de idioma e salvar alternativa.

--- a/src/main/resources/application_en.properties
+++ b/src/main/resources/application_en.properties
@@ -1,15 +1,11 @@
-pages.comuns.cabecalho.lingua              			= Language: 
-
-pages.comuns.menuLateral.gerencial 					= Manager
-pages.comuns.menuLateral.inicio             		= Start    
-pages.comuns.menuLateral.options            		= Options
-
-pages.inicio.welcome								= Welcome to TMaker! The best service in web that you can make your tests with, comfort, precision and quickness.
-pages.inicio.title									= System->Start
+pages.inicio.welcome								= Welcome to TMaker! The best service in web that you can make your tests with, confort, precision and quickness.
+pages.inicio.title									= Home
 pages.inicio.menu									= Home
+
 
 pages.comuns.form.btnSalvar                 		= Save
 pages.comuns.form.opcoes							= Options
+
 
 pages.comuns.menu.inicio							= Home
 pages.comuns.menu.cadastros							= Registers
@@ -25,50 +21,19 @@ pages.comuns.btn.pergunta							= Register Questions
 pages.comuns.btn.conteudo							= Register Contents
 pages.comuns.btn.prova								= Register Tests
 
+
 pages.comuns.rodape.footerText 						= http://www.iznerol.com.br - Alfa 1.0
 pages.comuns.rodape.allRightsReserved 				= 2016 - All rights reserved
 
-pages.templateMenu.titleMainMenu 		     		= Main Menu
-
-pages.cadastroAluno.title							= Manager->Register Student
-pages.cadastroAluno.menu							= Register Student
-pages.cadastroAluno.matricula						= Id
-pages.cadastroAluno.nome							= Name
-pages.cadastroAluno.curso							= Course
-pages.cadastroAluno.btnSalvar						= Save
-pages.cadastroAluno.filterMSG               		= No students selection
-pages.cadastroAluno.optionTable             		= Options
-pages.cadastroAluno.tableTitle              		= Registered Students
-
-pages.linguagem.title                      		 	= Option->Language
+pages.linguagem.title                      		 	= Language
 pages.linguagem.lingua								= Change Language:
 pages.linguagem.menu								= Language
 pages.linguagem.idiomaDisp							= Available languages
 
+
 pages.sobre.title									= About us
 pages.sobre.info									= We are a big fucking company of information tecnology
 
-
-pages.cadastroFornecedor.title			   			= Manager->Register Supplier
-pages.cadastroFornecedor.menu						= Register Supplier
-pages.cadastroFornecedor.nome               		= Name
-pages.cadastroFornecedor.tableTitle        			= Registered Suppliers
-pages.cadastroFornecedor.codigo             		= Id
-pages.cadastroFornecedor.produtosFornecedor 		= Suplier's products 
-pages.cadastroFornecedor.produto.nome       		= Name
-pages.cadastroFornecedor.produto.descricao 			= Description
-pages.cadastroFornecedor.produto.valor      		= Price
-pages.cadastroFornecedor.produto.codigo     		= Id
-
-
-pages.cadastroProduto.title				    		= Manager->Register Product
-pages.cadastroProduto.menu							= Register Product
-pages.cadastroProduto.descricao						= Description
-pages.cadastroProduto.fornecedor.nome				= Name
-pages.cadastroProduto.fornecedor.msg				= Selected a Supplier
-pages.cadastroProduto.valor							= Price
-pages.cadastroProduto.tableTitle           			= Register Products
-pages.cadastroProduto.codigo						= Id
 
 pages.cadastroProfessor.title                  		= Register teacher
 pages.cadastroProfessor.menu						= Register teacher
@@ -132,7 +97,7 @@ pages.cadastroPergunta.form.pergunta.enunciado		= Enunciation:
 pages.cadastroPergunta.form.pergunta.dificuldade	= Difficult:
 pages.cadastroPergunta.form.pergunta.tempoEstimado	= Estimated time:
 pages.cadastroPergunta.form.pergunta.dataCriacao 	= Creation date:
-pages.cadastroPergunta.form.pergunta.items			= Items:
+pages.cadastroPergunta.form.pergunta.itens			= Itens:
 pages.cadastroPergunta.form.pergunta.resposta		= Answer:
 pages.cadastroPergunta.table.title					= Registered questions 
 pages.cadastroPergunta.table.codigo					= Code		
