--- a/src/main/resources/application_pt.properties
+++ b/src/main/resources/application_pt.properties
@@ -1,8 +1,3 @@
-pages.comuns.menuLateral.gerencial 					= Gerencial
-pages.comuns.menuLateral.inicio            			= In\u00edcio
-pages.comuns.menuLateral.options            		= Op\u00e7\u00f5es    
-
-
 pages.comuns.menu.inicio							= In\u00edcio
 pages.comuns.menu.cadastros							= Cadastros
 pages.comuns.menu.gerarProva						= Gerar Prova
@@ -23,7 +18,7 @@ pages.comuns.form.opcoes							= Opções
 
 
 pages.inicio.welcome								= Bem vindo ao TMaker! O melhor servi\u00e7o web para você professor fazer suas provas com conforto, precisão e rapidez.
-pages.inicio.title									= Sistema->In\u00edcio
+pages.inicio.title									= In\u00edcio
 pages.inicio.menu									= In\u00edcio
 
 
@@ -34,7 +29,7 @@ pages.comuns.rodape.allRightsReserved 				= 2016 - Todos os direitos reservados
 pages.templateMenu.titleMainMenu 		     		= Menu Principal
 
 
-pages.linguagem.title                      			= Opc\u00f5es->Idioma
+pages.linguagem.title                      			= Idioma
 pages.linguagem.lingua								= Trocar de Idioma:
 pages.linguagem.menu								= Idioma
 pages.linguagem.idiomaDisp							= Idiomas disponíveis
